--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                 Desistir e voltar para casa</button>
         </div>
     </main>
+    <script src="script.js"></script>
 </body>
 
 </html>
