--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <main>
-        <div>
+        <div class="passo ativo" id="passo-0">
             <p>Um dia desses, dentro de um livro
                 da biblioteca da escola,
                 eu descobri uma carta antiga
