--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <body>
     <main>
         <div class="passo ativo" id="passo-0">
+            <img src="cenario-passo0.png" alt="A imagem se trata de uma paisagem de árvores com uma cachoeira"
             <p>Um dia desses, dentro de um livro
                 da biblioteca da escola,
                 eu descobri uma carta antiga
